added git overlay section

--- a/index.html
+++ b/index.html
@@ -101,11 +101,30 @@
           class="duration-700 ease-in-out absolute inset-0 transition-all transform translate-x-0 z-20"
           data-carousel-item="active"
         >
-          <img
-            src="./images/cover/cover-1.png"
-            class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
-            alt="..."
-          />
+          <div class="relative h-full w-full">
+            <img
+              src="./images/cover/cover-1.png"
+              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
+              alt="..."
+            />
+
+            <div class="absolute h-full w-full flex items-center justify-center">
+              <div class="backdrop-blur-md bg-black/10 p-10 text-center rounded-md">
+                <h3 class="font-bold text-4xl text-white">
+                  Get Started Digital Learning
+                </h3>
+                <p class="text-md text-white">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt,
+                  consequatur.
+                </p>
+                <button
+                  class="px-4 py-3 bg-[#289bde] text-white font-semibold text-lg rounded-md focus:ring-4"
+                >
+                  Get Started
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
         <!-- Item 2 -->
         <div
