minor bug fixed

--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
       </div>
     </footer>
 
-    <!-- Tailwind library -->
+    <!-- Tailwindcss -->
     <script src="https://unpkg.com/flowbite@1.5.1/dist/flowbite.js"></script>
   </body>
 </html>
