--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
       </div>
     </section>
 
-    <!-- Footer section -->
+    <!-- Footer  -->
     <footer class="p-4 my-10 bg-white sm:p-6">
       <div class="md:flex md:justify-between">
         <div class="mb-6 md:mb-0">
