minor bugs fixed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
 
-  <body class="mx-4 md:md-6 lg:mx-10 font-family: 'Inter', sans-serif;">
+  <body class="mx-4 md:md-6 lg:mx-10">
     <!-- Header -->
     <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded">
       <div class="container flex flex-wrap justify-between items-center mx-auto">
@@ -110,14 +110,15 @@
 
             <div class="absolute h-full w-full flex items-center justify-center">
               <div
-                class="backdrop-blur-sm md:backdrop-blur-md bg-black/10 p-10 text-center rounded-md"
+                class="backdrop-blur-sm space-y-2 md:backdrop-blur-md bg-black/10 p-10 text-center rounded-md"
               >
                 <h3 class="font-bold text-2xl md:text-4xl text-white">
                   Get Started Digital Learning
                 </h3>
                 <p class="text-md text-white">
                   It is a long established fact that a reader will be distracted by the
-                  readable content of a page when looking at its layout.
+                  readable <br />
+                  content of a page when looking at its layout.
                 </p>
                 <button
                   class="px-4 z-30 py-3 bg-[#289bde] text-white font-semibold text-lg rounded-md focus:ring-4"
@@ -368,7 +369,7 @@
 
     <!-- Ready to Join section -->
     <section
-      class="p-8 lg:flex items-center justify-around my-10 sm:px-10 text-center bg-[#289bde] rounded-md text-white"
+      class="p-8 lg:flex items-center justify-around lg:py-20 my-10 sm:px-10 text-center bg-[#289bde] rounded-md text-white"
     >
       <div class="lg:text-left">
         <h3 class="font-semibold text-3xl">Ready to join?</h3>
